[package]
name = "datafusion-jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.81.1"
cranelift-module = "0.81.1"
cranelift-jit = "0.81.1"
cranelift-native = "0.81.1"
parking_lot = "0.12"
arrow = "9.0.2"
